# libft

./: .gitignore  CMakeLists.txt  Makefile  log.h  main.c  main.h  my_test.h  note  regex-norme.md  regex.md  render.sh
no_finish/ft_printf/: CMakeLists.txt  bonus_functions.c  handle_strings.c  parse_arguments.c
src/: CMakeLists.txt  array.func.c  array.handle.c  array.sort.c  bswap.c  ft_atoi.c  ft_buffer.c  ft_bzero.c  ft_catch_options.c  ft_char_test.c  ft_errno.c  ft_free_split.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst.c  ft_lstcount.c  ft_lstfunc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_pf.catch_format.c  ft_pf.get_number.c  ft_pf.get_str.c  ft_pf.print.c  ft_pf.utils.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnstr.c  (+30 more)
src/ft_array/: CMakeLists.txt  ft_array.add.c  ft_array.add_at.c  ft_array.at.c  ft_array.bubble.c  ft_array.bubble.h  ft_array.cmp.c  ft_array.cmp_utils.c  ft_array.copy.c  ft_array.double_size.c  ft_array.extract_by_func.c  ft_array.find.c  ft_array.free.c  ft_array.free_func.c  ft_array.func.c  ft_array.func.utils.c  ft_array.func_cmp.c  ft_array.init.c  ft_array.insert.c  ft_array.main.c  ft_array.next.c  ft_array.prev.c  ft_array.push.c  ft_array.remove.c  ft_array.remove_from.c  ft_array.remove_func.c  ft_array.slice.c  ft_array.slice_and_remove.c  ft_array.sort.utils.c  ft_array.sort_bubble.c  ft_array.utils.c  ft_array_at.c  ft_array_copy.c
src/ft_array/includes/: ft_array.h  ft_array.structure.h
src/ft_array/src/: ft_array.at.c  ft_array.cmp.c  ft_array.cmp_utils.c  ft_array.copy.c  ft_array.double_size.c  ft_array.extract_by_func.c  ft_array.find.c  ft_array.free.c  ft_array.free_func.c  ft_array.func.c  ft_array.func.utils.c  ft_array.init.c  ft_array.insert.c  ft_array.next.c  ft_array.prev.c  ft_array.push.c  ft_array.remove.c  ft_array.remove_from.c  ft_array.remove_func.c  ft_array.slice.c  ft_array.slice_and_remove.c  ft_array.sort.utils.c  ft_array.sort_bubble.c  ft_array.utils.c
src/ft_array/tests/: ft_array.add.test.c  ft_array.at.test.c  ft_array.bubble.test.c  ft_array.cmp.test.c  ft_array.copy.test.c  ft_array.double_size.test.c  ft_array.extract_by_func.test.c  ft_array.find.test.c  ft_array.free.test.c  ft_array.func.test.c  ft_array.init.test.c  ft_array.main.test.c  ft_array.prev.next.test.c  ft_array.push.test.c  ft_array.remove.test.c  ft_array.remove_from.test.c  ft_array.slice.test.c  ft_array.slice_and_remove.test.c  ft_array.test.c  ft_array.test.h  ft_array.utils.test.c  main.test.c
src/ft_buffer/: CMakeLists.txt  ft_buffer.c
src/ft_buffer/includes/: ft_buffer.h
src/ft_buffer/tests/: ft_buffer.main.test.c  ft_buffer.test.c
src/ft_errno/: CMakeLists.txt  ft_errno.set.c  ft_errno.utils.c  ft_perror.c  ft_strerror.c
src/ft_errno/includes/: ft_errno.h
src/ft_io/: CMakeLists.txt  ft_atoi.c  ft_catch_options.c  ft_io.catch_options.c  ft_itoa.c  get_next_line.c
src/ft_io/includes/: ft_io.h
src/ft_io/tests/: ft_io.catch_options.test.c  ft_io.main.test.c  ft_io.main.test.h  main.test.c
src/ft_log/: CMakeLists.txt  ft_log.c  ft_log.init.c  ft_log.utils.c  log.c  utlis.c
src/ft_log/includes/: ft_log.h  log.h
src/ft_log/tests/: ft_log_test.c
src/ft_logs/: ft_logs.c
src/ft_mem/: CMakeLists.txt  ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_memswap.c
src/ft_mem/includes/: ft_mem.h
src/ft_printf/: CMakeLists.txt  ft_pf.catch_format.c  ft_pf.get_number.c  ft_pf.get_str.c  ft_pf.get_variable.c  ft_pf.print.c  ft_pf.utils.c  ft_printf.c  handle_strings.c  parse_arguments.c  utils.c
src/ft_printf/includes/: ft_printf.h
src/ft_printf/src/: ft_pf.catch_format.c  ft_pf.get_number.c  ft_pf.get_str.c  ft_pf.print.c  ft_pf.utils.c  ft_printf.c
src/ft_printf/tests/: ft_pf.catch_format.test.c  ft_pf.get_nb.test.c  ft_pf.get_str.test.c  ft_pf.get_variable.test.c  ft_pf.main.test.c  ft_pf.main.test.h  ft_pf.print.test.c  ft_printf.test.c  pf.main.test.c
src/ft_s/: CMakeLists.txt  ft_s.add.c  ft_s.add_at.c  ft_s.addn.c  ft_s.clear.c  ft_s.free.c  ft_s.init.c  ft_s.remove_from.c  ft_s.replace_str.c  ft_s.search_str.c
src/ft_s/includes/: ft_s.h
src/ft_s/tests/: ft_s.add.init.test.c  ft_s.add.test.c  ft_s.add_at.test.c  ft_s.clear.test.c  ft_s.free.test.c  ft_s.init.test.c  ft_s.main.test.c  ft_s.remove_from.test.c  ft_s.replace_str.test.c  main.test.c
src/ft_str/: CMakeLists.txt  ft_capitalize.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isspace.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnstr.c  ft_putsteret.c  ft_str.add_buffer.c  ft_str.char.modification.c  ft_str.char_helper_1.c  ft_str.char_helper_2.c  ft_str.free.c  ft_str.search_start.c  ft_str_free.c  ft_str_replace.c  ft_strchr.c  ft_strchrreplace.c  ft_strcmp.c  ft_strdup.c  ft_streq.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strnew.c  ft_strsub.c  str.ft_str_search.c
src/ft_str/includes/: ft_str.h
src/ft_str/src/: ft_pstrjoin_chr.c  ft_putchar.c  ft_putnstr.c  ft_str.add_buffer.c  ft_str.by_func.c  ft_str.char_helper_1.c  ft_str.char_helper_2.c  ft_str.find_str.c  ft_str.join_chr.c  ft_str.ncmp.c  ft_str.replace.c  ft_str.search_start.c  ft_strcat.c  ft_strchr.c  ft_strchrreplace.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strsub.c
src/ft_str/tests/: ft_str.main.test.c  ft_str.search_start.test.c
src/ft_strsplit/: CMakeLists.txt  ft_free_split.c  ft_str_print_split.c  ft_str_split_count.c  ft_strsplit.add.c  ft_strsplit.c  ft_strsplit.cmp.c  ft_strsplit.copy.c  ft_strsplit.func.c  ft_strsplit.remove.c  ft_strsplit.search.c
src/ft_strsplit/includes/: ft_strsplit.h
src/ft_systm/: CMakeLists.txt
src/ft_systm/includes/: ft_systm.h
src/ft_test/: CMakeLists.txt  libft_utils.c  libft_utils_test.c
src/includes/: ft_errno.h  ft_logs.h  ft_mem.h  libft.h  libft_struct.h
src/lib/: libft.test.h  libft_utils.c
src/test_lib/: ft_testing_function.c
(+194 files in other folders)
