

# ------------------------------------------------------------------------------
#    add all submodule of my lib
# ------------------------------------------------------------------------------
add_subdirectory(ft_array)
add_subdirectory(ft_buffer)
add_subdirectory(ft_errno)
add_subdirectory(ft_io)
add_subdirectory(ft_log)
add_subdirectory(ft_mem)
add_subdirectory(ft_printf)
add_subdirectory(ft_s)
add_subdirectory(ft_str)
add_subdirectory(ft_systm)
add_subdirectory(ft_strsplit)
add_subdirectory(ft_test)

